@@ -1032,16 +1032,19 @@ def bind_list_to_object(bind_list):
     if bind_list is None:
         return None
     bindings = []
-    for method in bind_list:
-        method, _, args = method.partition(',')
-        binding = {'method': method}
-        for arg in args.split(','):
-            if arg != '':
-                if '=' not in arg:
-                    raise ValueError('Argument %s is not key=value' % arg)
-                key, _, value = arg.partition('=')
-                binding[key] = value
-        bindings.append(binding)
+    for entry in bind_list:
+        methods = []
+        for method in entry.split('|'):
+            method, _, args = method.partition(',')
+            binding = {'method': method}
+            for arg in args.split(','):
+                if arg != '':
+                    if '=' not in arg:
+                        raise ValueError('Argument %s is not key=value' % arg)
+                    key, _, value = arg.partition('=')
+                    binding[key] = value
+            methods.append(binding)
+        bindings.append(methods)
     return bindings
 
 def unbind_passphrase(bound_passphrase):
@@ -1050,24 +1053,36 @@ def unbind_passphrase(bound_passphrase):
     This function will get either a raw passphrase string, or a json object
     indicating a bound passphrase, as generated by _bind_passphrase.
     """
-    while bound_passphrase.startswith('{'):
-        # If the passphrase starts with {, that means it's a bound one,
+    while bound_passphrase.startswith('{') or bound_passphrase.startswith('['):
+        # If the passphrase starts with { or [, that means it's a bound one,
         # since _passphrase_characters only includes letters and digits.
         # Overwrite bound_passphrase at each step
         info = json.loads(bound_passphrase)
-        method = info['method']
-        value = info['value']
-        del info['method']
-        del info['value']
-        unbind_func = BindingMethodRegistry.get_unbinding_function(method)
-        bound_passphrase = unbind_func(value, **info)
-        if bound_passphrase is None:
+        if isinstance(info, dict):
+            # This was a passphrase bound before we had either-or binding
+            info = [info]
+        unbound_passphrase = None
+        attempted = []
+        for entry in info:
+            method = entry['method']
+            value = entry['value']
+            del entry['method']
+            del entry['value']
+            attempted.append((method, entry))
+            unbind_func = BindingMethodRegistry.get_unbinding_function(method)
+            attempted_unbind = unbind_func(value, **entry)
+            if attempted_unbind is not None:
+                # We were able to decrypt it
+                unbound_passphrase = attempted_unbind
+                break
+        if unbound_passphrase is None:
             # This unbinding failed
-            logging.warning('Failed to unbind with method %s, args %s'
-                            % (method, ','.join([str('%s=%s' %
-                                                 (key, info[key]))
-                                                 for key in info])))
+            logging.warning(
+                'Failed to unbind with any of the following: %s' %
+                ', '.join(['method: %s, args: %s' % (entry[0], entry[1])
+                           for entry in attempted]))
             return None
+        bound_passphrase = unbound_passphrase
 
     return str(bound_passphrase)
 
@@ -1080,11 +1095,26 @@ def bind_passphrase(passphrase, bind_params):
     which indicates the method used for binding. Any other keys in the list
     are parameters for the binding method used.
 
+    Items in the list can also be a list themselves with binding methods for
+    either-or binding. Every field inside this list should be a dict with a
+    method field and the rest as described above.
+    The passphrase will be bound with every token indicated by the list, and
+    all versions will be stored in the database.
+    Upon unbinding, the server will try to decrypt any of the entries in a
+    layer, and continue with those it was able to decrypt.
+    This allows a particular passphrase to be bound to multiple tokens at a
+    single level.
+    This is useful if you have multiple sigul servers: you would add the public
+    keys for their tokens to the other servers to bind to, and then when you
+    move the database to one of the other servers, they would still be able to
+    decrypt bound passphrases.
+    This mechanism is called Either-Or binding.
+
     If the bind_params indicate this passphrase should not be bound, this
     will return the passphrase unmodified.
 
-    If the key is to be bound, the returned string is a json object string
-    with at least two values:
+    If the key is to be bound, the returned string is a json list with each
+    entry an object string with at least two values:
     - method: the method used for binding (TPM, yubikey, ...)
     - value: the actual bound value
     More values can be added based on the binding method, like the TPM
@@ -1095,19 +1125,25 @@ def bind_passphrase(passphrase, bind_params):
         bind_params = []
 
     for entry in bind_params:
-        # Bind using the method specified in bind_params
-        # Overwrite passphrase at each level
-        method = entry['method']
-        del entry['method']
-        bind_func = BindingMethodRegistry.get_binding_function(method)
-        value, args = bind_func(passphrase, **entry)
-        if value is None:
-            # This binding failed
-            return None
-        if args is None:
-            args = {}
-        args['value'] = value
-        args['method'] = method
-        passphrase = json.dumps(args)
+        if not isinstance(entry, list):
+            # This is probably the standard case.
+            entry = [entry]
+        targets = []
+        for target_entry in entry:
+            # Bind using the method specified in bind_params
+            # Overwrite passphrase at each level
+            method = target_entry['method']
+            del target_entry['method']
+            bind_func = BindingMethodRegistry.get_binding_function(method)
+            value, args = bind_func(passphrase, **target_entry)
+            if value is None:
+                # This binding failed
+                return None
+            if args is None:
+                args = {}
+            args['value'] = value
+            args['method'] = method
+            targets.append(args)
+        passphrase = json.dumps(targets)
 
     return str(passphrase)
