@@ -2,6 +2,8 @@
 
 	* src/bind_methods.py: Added option for public-only PKCS11 tokens.
 
+	* src/utils.py: Implement Either-Or binding.
+
 2017-02-13  Patrick Uiterwijk  <puiterwijk@redhat.com>
 
 	* configure.ac: Release 0.203
